# ESP_NOW_Home_Network

./: README.md
NODE_RED/: flows.json
common/: my_espnow.h
esp-idf-espnow-gateway-ota/: LICENSE  ipaddresses.txt  sdkconfig  sdkconfig.old
esp-idf-espnow-gateway-ota/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  led_mon.c  led_mon.h  main.c  main.c.test_info  main_no_task.c  mqtt.c  mqtt.h  my_espnow.h.testinfo  my_espnow.h.x
espnow-node-ota/: CMakeLists.txt  nvs_data.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s2  sdkconfig.old
espnow-node-ota/main/: CMakeLists.txt  ESPNOW_node.c  ESPNOW_node.c.fail  ESPNOW_node.c.hangonota  ESPNOW_node.c.nonodeinfo  ESPNOW_node.c.testinfo  ESPNOW_ota.c  ESPNOW_ota.h  ESPNOW_peer_rtos.c  Kconfig.projbuild  my_espnow.h.x
